--- a/src/app/components/ludecamp/ludecamp.component.scss
+++ b/src/app/components/ludecamp/ludecamp.component.scss
@@ -3,6 +3,7 @@
   text-align: center;
   color: white;
   background-color: black;
+  min-height: 90vh;
 }
 
 // desktop
@@ -55,6 +56,7 @@
 @media (max-width:800px) {
   :host {
     padding-bottom: 1vh;
+    min-height: 100vh;
   }
 
   .header {
