--- a/src/app/components/scoreboard/scoreboard.component.scss
+++ b/src/app/components/scoreboard/scoreboard.component.scss
@@ -1,5 +1,6 @@
 :host {
   text-align: center;
+  min-height: 90vh;
 }
 
 .table-item {
